--- a/app/src/main/res/drawable/tools_back.xml
+++ b/app/src/main/res/drawable/tools_back.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
             <stroke android:width="1dp" android:color="#D8D8D8"/>
@@ -12,4 +12,4 @@
         </shape>
     </item>
 
-</selector>
+</layer-list>
