--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -91,6 +91,7 @@
                     android:layout_width="190dp"
                     android:layout_height="27dp"
                     android:layout_margin="5dp"
+                    android:singleLine="true"
                     android:hint="@string/webUrlHint" />
 
                 <ImageView
